Fix footer spacing

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   font-size: $m-size;
   color: $dark-blue;
 }
